[project]
name = "venn_diagram"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "VentCat", email = "2546650292@qq.com" }]
dependencies = [
    "toml>=0.10.2",
    "matplotlib>=3.9.0",
    "matplotlib-venn>=0.11.10",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "py_script_template:main"

[tool.rye.scripts]
dev = '''rye run main --input_file1 'A.txt' --input_file2 'B.txt' --labels 'SetA,SetB' --format 'all' --output_name 'intersection.txt' --img_name 'venn_diagram' --case_sensitive 'Yes' '''

[tool.rye]
managed = true
dev-dependencies = []
sources = [
    { name = "tsinghua", url = "https://pypi.tuna.tsinghua.edu.cn/simple" },
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_script_template"]
